# vers

./: .gitignore  Cargo.toml  LICENSE-BITINTR  LICENSE-MIT  migrate.md  readme.md  run.sh
.github/workflows/: benchmarks.yml  rust.yml
benches/: bp.rs  comparison_benchmark.rs  comparison_succinct_benchmark.rs  ef_comparison_benchmark.rs  elias_fano.rs  elias_fano_adversarial.rs  elias_fano_benchmark.rs  elias_fano_construction.rs  elias_fano_iterator.rs  rank.rs  rank_benchmark.rs  rmq.rs  rmq_benchmark.rs  rmq_comparison_benchmark.rs  rsvec_iter_benchmark.rs  select.rs  select_adversarial.rs  select_benchmark.rs  select_iter.rs  select_iter_benchmark.rs  sparse_equals.rs  worst_ef_benchmark.rs  worst_select_benchmark.rs
benches/common/: mod.rs
examples/: ads_project.rs  measure_heap.rs  rmq.rs
src/: elias_fano.rs  fast_bit_vec.rs  lib.rs  util.rs
src/arch/: aarch64.rs  generic.rs  mod.rs  x86_64.rs
src/bit_vec/: fast_rs_vec.rs  mask.rs  mod.rs  sparse.rs  tests.rs
src/bit_vec/fast_rs_vec/: arm64_select.rs  bitset.rs  iter.rs  mod.rs  select.rs  tests.rs
src/bit_vec/rs/: iter.rs  mod.rs  select.rs  tests.rs
src/ef/: tests.rs
src/elias_fano/: mod.rs  tests.rs
src/rmq/: binary_rmq.rs  fast_rmq.rs  mod.rs  naive.rs  small_naive.rs
src/rmq/binary_rmq/: mod.rs  tests.rs
src/rmq/fast_rmq/: mod.rs  tests.rs
src/rmq/small/: mod.rs  tests.rs
src/rmq/sparse/: tests.rs
src/trees/: bp.rs  mmt.rs  mod.rs
src/trees/bp/: builder.rs  lookup.rs  lookup_query.rs  mod.rs  tests.rs
src/util/: elias_fano.rs  elias_fano_iter.rs  general_iter.rs  mod.rs  pdep.rs  unroll.rs
src/wavelet/: mod.rs  tests.rs
