[package]
name = "vers"
version = "0.1.0"
edition = "2021"
authors = ["Johannes \"Cydhra\" Hengstler"]
description = "A collection of succinct data structures supported by fast implementations of rank and select queries."
readme = "readme.md"
repository = "https://github.com/Cydhra/vers"
license = "MIT"
license-file = "LICENSE"
keywords = ["succinct", "bit-vector", "elias-fano", "rmq", "predecessor"]
categories = ["data-structures", "algorithms"]

[dependencies]

[dev-dependencies]
# benchmarking
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8"

# comparison benchmarks libraries
rsdict = { version = "0.0.6", features = ["simd"] }
bio = "1.1"
bv = "0.11.1"
fid = "0.1"
indexed_bitvec = "4.0"
succinct = "0.5"
elias-fano = "1.1"
range_minimum_query = "0.1"
librualg = "0.29"

[[bench]]
name = "rank_benchmark"
harness = false

[[bench]]
name = "comparison_benchmark"
harness = false

[[bench]]
name = "select_benchmark"
harness = false

[[bench]]
name = "worst_select_benchmark"
harness = false

[[bench]]
name = "elias_fano_benchmark"
harness = false

[[bench]]
name = "worst_ef_benchmark"
harness = false

[[bench]]
name = "ef_comparison_benchmark"
harness = false

[[bench]]
name = "rmq_comparison_benchmark"
harness = false

[[bench]]
name = "rmq_benchmark"
harness = false

[profile.bench]
lto = true

[profile.release]
lto = true
