[package]
name = "vers-vecs"
version = "1.3.1"
edition = "2021"
authors = ["Johannes \"Cydhra\" Hengstler"]
description = "A collection of succinct data structures supported by fast implementations of rank and select queries."
readme = "readme.md"
repository = "https://github.com/Cydhra/vers"
license = "MIT OR Apache-2.0"
keywords = ["succinct", "elias-fano", "bitvector", "rank", "select"]
categories = ["data-structures", "algorithms"]
exclude = [
    "images/*",
]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
# benchmarking
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = { version = "0.8", features = ["alloc"] }
plotters = "0.3.5"

[[bench]]
name = "rank_benchmark"
harness = false

[[bench]]
name = "select_benchmark"
harness = false

[[bench]]
name = "select_iter_benchmark"
harness = false

[[bench]]
name = "worst_select_benchmark"
harness = false

[[bench]]
name = "elias_fano_benchmark"
harness = false

[[bench]]
name = "worst_ef_benchmark"
harness = false

[[bench]]
name = "rmq_benchmark"
harness = false

[[bench]]
name = "rsvec_iter_benchmark"
harness = false

[[bench]]
name = "sparse_equals"
harness = false

[profile.bench]
lto = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["-Ctarget-feature=+bmi2,+popcnt"]
rustdoc-args = ["-Ctarget-feature=+bmi2,+popcnt"]
