[package]
name = "vers-vecs"
version = "1.5.1"
edition = "2021"
authors = ["Johannes \"Cydhra\" Hengstler"]
description = "A collection of succinct data structures supported by fast implementations of rank and select queries."
readme = "readme.md"
repository = "https://github.com/Cydhra/vers"
license = "MIT OR Apache-2.0"
keywords = ["succinct", "elias-fano", "bitvector", "rank", "wavelet-matrix"]
categories = ["data-structures", "algorithms"]
documentation = "https://docs.rs/vers-vecs"
exclude = [
    "images/*",
    ".github/*",
]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
# benchmarking
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = { version = "0.8", features = ["alloc"] }

[features]
simd = []
u16_lookup = []
docsrs = [] # special feature for docs.rs to enable doc_auto_cfg on nightly

[[bench]]
name = "rank"
harness = false

[[bench]]
name = "select"
harness = false

[[bench]]
name = "select_iter"
harness = false

[[bench]]
name = "select_adversarial"
harness = false

[[bench]]
name = "sparse_equals"
harness = false

[[bench]]
name = "elias_fano"
harness = false

[[bench]]
name = "elias_fano_adversarial"
harness = false

[[bench]]
name = "elias_fano_iterator"
harness = false

[[bench]]
name = "rmq"
harness = false

[[bench]]
name = "bp"
harness = false

[profile.bench]
lto = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["-C", "target-cpu=native"]
rustdoc-args = ["-C", "target-cpu=native", "--cfg", "docsrs"]
